--- a/趣谈网络协议.md
+++ b/趣谈网络协议.md
@@ -1,2 +1,11 @@
 ##第2章：网络分层的真实含义是什么
 
+1.网络分层的意义和我们传统软件开发的MVC目的是一样的，分层即为了解耦。  
+2.只要是跑在网络上的包，都是完整的。可以有下层没上层，但绝对不可能有上层没下层。  
+3.一包网络包从A到到B，简单说就是经历自上而下的层层装包，然后又经历了自下至上的层层拆包  
+4.有了IP地址为什么还要有MAC地址？  
+>（1）IP地址是OSI三层的地址；MAC地址是OSI二层地址。  
+>（2）基于第1点，在广域网中寻址使用IP地址；在局域网中寻址使用MAC地址。
+
+
+##第3章：ifconfig：最熟悉又陌生的命令行
