--- a/Readme
+++ b/Readme
@@ -3,7 +3,7 @@ M2 - 中间件
 
 
 TODO
-1.synchronize升级和markword
+1.CMAP整理：https://www.cnblogs.com/ylspace/p/12726672.html
 2.ThreadLocal里的Entry为什么会被定义成WeakReference
 
 
