--- a/随便看看/Readme
+++ b/随便看看/Readme
@@ -1,7 +1,7 @@
 ####分布式计算成熟后能否与“天河二号”这种超级计算机相互代替？
 > 首先说结论是不能  
 > 分布式计算适用于计算量大，但可拆解任务，再将结果汇总的场景。而超级计算机适用于计算量大，且计算过程中各个参与计算的节点还有频繁的数据交互，此时如果采用分布式计算各个节点的IO将成为了瓶颈。
-> 简单了解一下天河二号：大概3W+主CPU，312W核，内存1404TB，硬盘12PB，每次计算前所有数据读入内存，计算过程中几乎不访问硬盘，硬盘只作为数据的备份和运算结果的保存。
+> 简单了解一下天河二号：大概3W+主CPU，312W核，内存1404TB，硬盘12PB，每秒3万万亿次浮点运算，每次计算前所有数据读入内存，计算过程中几乎不访问硬盘，硬盘只作为数据的备份和运算结果的保存。
 
 ####缓存设计原理
 > 1.时间局部性：如果一个数据正在被访问，那么近期还有可能会再次被访问  
