--- a/中间件/MySQL/Readme
+++ b/中间件/MySQL/Readme
@@ -31,8 +31,28 @@
 
 #### Chatper7
 > Mysql事务是如何用二段提交实现行锁功能。
-> 
+> 由于mysql是按需加锁，所以如果一个事务中有多个修改操作，应该将最有可能并发锁的的操作往后放。以买电影票为例:1.扣减用户余额；2.电影院票数减1；此时「用户记录」并发度相对「电影院票数」并发度更低，因此最好将电影院票数操作滞后
+> 数据库是如何出现死锁的？如何避免出现死锁
+>> A：例如：
+>> ① [T1] update xxx where id = 1;【T1对id=1记录持有锁】  
+>> ② [T2] update xxx where id = 2;【T2对id=2记录持有锁】  
+>> ③ [T1] update xxx where id = 2;【T1尝试对id=2记录持有锁，但需要等待T2释放】  
+>> ④ [T2] update xxx where id = 1;【T2尝试对id=1记录持有锁，但需要等待T1释放】 
+>> 死锁往往无法避免，只能通过一些参数配置来解决:
+>> ① 配置timeout让其超时，弊端是超时时间并不好掌握  
+>> ② 配置自动检测，发现死锁后回滚其中一个事务，让另一个得以执行，但弊端是由于每个执行事务的线程都要检查依赖线程，因此性能耗费巨大，带来系统负载过高。
+>> ③ 从设计上解决：将热点数据拆分成多个热点数据，让多个子热点数据平均承担并发，减少死锁的概率。
 
-####
+#### Chapter8 * 
+> begin/start transaction 命令并不是一个事务的起点，在执行到它们之后的第一个操作 InnoDB 表的语句，事务才真正启动。
+> 在RR隔离级别下，事务在启动之初就会对整库拍下快照
+> 整理如果多个事务开始，其内部MVCC和tx_rowid以及read_view的运行过程。 
+
+#### Chapter9 *
+> 唯一索引和普通索引查询过程、更新过程
+> change buffer工作原理
+
+#### 
 > 执行一个SQL返回数据量特别多的时候，还需要通过断开连接来释放Server端内存吗？
 > 不同引擎的特点，以及使用场景
+
