--- a/中间件/MySQL/Readme
+++ b/中间件/MySQL/Readme
@@ -53,6 +53,6 @@
 > change buffer工作原理
 
 #### 
-> 执行一个SQL返回数据量特别多的时候，还需要通过断开连接来释放Server端内存吗？
+> 执行一个SQL返回数据量特别多的时候，还需要通过断开连接来释放Server端内存吗
 > 不同引擎的特点，以及使用场景
 
