--- a/中间件/Redis/Readme
+++ b/中间件/Redis/Readme
@@ -30,10 +30,11 @@
  2) 另一方面redis单线程采用多路复用的NIO线程模型
 
 #### 7.redis的线程模型
- 1) 主线程：NIO
+ 1) 主线程：NIO（待整理）
  2) 后台线程:AOF线程，expired线程
  
 #### 8.Redis 6.0 中提出了多线程模型是什么样的？
+ 待确认？？？ 6.0之前版本，主线程既负责编解码，又负责执行操作命令；6.0后的版本，应该是将线程分为了编解码线程集合和工作线程，其中编解码线程集合负责对redis传入的数据命令行进行序列化反序列化操作；而工作线程仍然是单线程，只负责执行redis指令。
 
 #### 9.Redis单线程处理IO请求性能瓶颈
  存在慢查询操作会阻塞master线程，导致整个server吞吐量下降
@@ -45,9 +46,9 @@
   6?) 主从全量同步生成RDB：虽然采用fork子进程生成数据快照，但fork这一瞬间也是会阻塞整个线程的，实例越大，阻塞时间越久；
  并发量非常大时，redis在反序列化客户端请求时，无法利用多CPU特性，redis6.0推出了在对客户端数据编解码时，采用多线程方式，而命令操作时在内存中依旧是单线程。
 
-#### 10.Redis为什么采用写后日志(AOF)，相比mysql的写前日志(WAL)，应用场景有什么不同？
+#### 10.Redis在将数据落盘时为什么采用写后日志(AOF)，相比mysql的写前日志(WAL)，应用场景有什么不同？
  写后日志的好处：先执行成功再写日志，不会阻塞当前线程写操作
- 写前日志的优势：mysql使用 redo Log + binLog 二阶段提交(prepare + commited),保证已提交的数据不会丢失，保证事务和一致性。
+ 写前日志的优势：mysql使用 redo Log + binLog 二阶段提交(prepare + commited),保证已提交的数据不会丢失，保证事务和一致性，而redis没有事务这一步骤，没有回滚操作，因此无需写前日志。
 
 #### 11.AOF的三种写盘策略
  1) always：每个操作日志都落盘
@@ -63,9 +64,38 @@
  其过程是redis会fork出一个bg-rewrite-aof线程，同时会将数据库的快照copy给rewrite线程？？？
  https://time.geekbang.org/column/article/271754
   
+#### 14.RDB如何保存数据库快照
+ 默认配置情况下，master线程会fork出一个bgsave线程，来保存t时刻的全量数据副本，t以后产生增量的数据用AOF日志记录。生产环境一般是定时用RDB做亏快照，
+ 然后在两次快照间隔中产生的增量数据，用AOF记录。
+ ？？？如何拿到t时刻的数据库快照，每个key都有时间戳吗？
+
+#### 15.Redis集群模式
+ 1) 主从方式，写操作时只调用master，master写入成功后会将数据同步给slave；读操作时客户端直接访问slave
+
+#### 16.Redis主从同步如何保证节点间的一致性
+ 1) 主从建立连接，协商同步
+ 2) 主fork出bgsave后台线程，将全量数据以rdb格式发送给从节点，与此同时记录下增量数据
+ 3) 从节点清空数据库，然后接到主的rdb文件后重建数据，重建完成后主节点陆续将新产生的增量数据发送给从节点，至此同步完成。
+
+#### 17.主从同步时，如果slave很多如何降低master压力
+ 采用主-从-从机制，让新增的slave挂载到已经同步完成的slave上即可。
+
+#### 18.主从同步数据文件采用RDB格式，而非AOF原因
+ RDB是二进制文件，存储文件相对AOF较小，方便带宽传输，且相比AOF回放日志而言，RDB还原速度更快。
+ 
+#### 19.如果master宕了怎么办
+ redis的哨兵机制，可以保证重新选出master节点，整个选举信任master一般经历下面3个步骤：
+ 1) 判定：在master正常时，哨兵集群会向其定时发送弹活包，一旦master挂掉时，哨兵也会第一时间感知到（一般高可用的redis哨兵也是以集群方式存在，防止单点哨兵网络不好形成误判）
+ 2) 选举：选举规则，优先排除掉网络不好的slave节点；然后将剩余的slave节点，根据优先级、主从数据复制进度（各个slave之间比对数据版本号），还有id大小进行打分。
+ 3) 通知：通知其他客户端master已经重新选举。
+
+#### 20.哨兵集群多数实例达成共识，判断出主库“客观下线”后，由哪个实例来执行主从切换呢？(难道不是由新任master来执行切换吗，主从切换都要做哪些事情？？？)
+ 哨兵集群判断出主库“主观下线”后，会选出一个“哨兵领导者”，之后整个过程由它来完成主从切换。
+ 但是如何选出“哨兵领导者”？这个问题也是一个分布式系统中的问题，就是我们经常听说的共识算法，指的是集群中多个节点如何就一个问题达成共识。共识算法有很多种，例如Paxos、Raft，这里哨兵集群采用的类似于Raft的共识算法。
+ 简单来说就是每个哨兵设置一个随机超时时间，超时后每个哨兵会请求其他哨兵为自己投票，其他哨兵节点对收到的第一个请求进行投票确认，一轮投票下来后，首先达到多数选票的哨兵节点成为“哨兵领导者”，如果没有达到多数选票的哨兵节点，那么会重新选举，直到能够成功选出“哨兵领导者”。
   
-  
-  
+#### 21.redis的哨兵之间是如何进行协作的
+ 
   
   
   
@@ -74,6 +104,20 @@
   
   
    
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
  
  
  
