--- a/中间件/Redis/Readme
+++ b/中间件/Redis/Readme
@@ -85,25 +85,82 @@
  
 #### 19.如果master宕了怎么办
  redis的哨兵机制，可以保证重新选出master节点，整个选举信任master一般经历下面3个步骤：
- 1) 判定：在master正常时，哨兵集群会向其定时发送弹活包，一旦master挂掉时，哨兵也会第一时间感知到（一般高可用的redis哨兵也是以集群方式存在，防止单点哨兵网络不好形成误判）
+ 1) 判定：在master正常时，哨兵集群会向其定时发送弹活包，一旦master挂掉时，哨兵也会第一时间感知到。此时哨兵会发起下线仲裁，给其他哨兵发送is-master-down-by-addr命令，征询投票结果，票数过半认定节点失效。
  2) 选举：选举规则，优先排除掉网络不好的slave节点；然后将剩余的slave节点，根据优先级、主从数据复制进度（各个slave之间比对数据版本号），还有id大小进行打分。
  3) 通知：通知其他客户端master已经重新选举。
 
-#### 20.哨兵集群多数实例达成共识，判断出主库“客观下线”后，由哪个实例来执行主从切换呢？(难道不是由新任master来执行切换吗，主从切换都要做哪些事情？？？)
+#### 20.哨兵集群多数实例达成共识，判断出主库“客观下线”后，由哪个实例来执行主从切换呢？
  哨兵集群判断出主库“主观下线”后，会选出一个“哨兵领导者”，之后整个过程由它来完成主从切换。
  但是如何选出“哨兵领导者”？这个问题也是一个分布式系统中的问题，就是我们经常听说的共识算法，指的是集群中多个节点如何就一个问题达成共识。共识算法有很多种，例如Paxos、Raft，这里哨兵集群采用的类似于Raft的共识算法。
- 简单来说就是每个哨兵设置一个随机超时时间，超时后每个哨兵会请求其他哨兵为自己投票，其他哨兵节点对收到的第一个请求进行投票确认，一轮投票下来后，首先达到多数选票的哨兵节点成为“哨兵领导者”，如果没有达到多数选票的哨兵节点，那么会重新选举，直到能够成功选出“哨兵领导者”。
+ 简单来说就是每个哨兵设置一个随机超时时间（增加扰动因子的目的是避免哨兵都立刻给自己投票，导致无法投票给其他人），超时后每个哨兵会请求其他哨兵为自己投票，其他哨兵节点对收到的第一个请求进行投票确认，一轮投票下来后，首先达到多数选票的哨兵节点成为“哨兵领导者”，如果没有达到多数选票的哨兵节点，那么会重新选举，直到能够成功选出“哨兵领导者”。
   
 #### 21.redis的哨兵之间是如何进行协作的
- 
+ 哨兵之间的协作，是通过master的发布订阅来进行通信的（master上会存在"__sentinel__:hello"的频道）。
+ 当哨兵上线后，通过给master发送info命令，来获取到slave节点信息，然后与slave建立连接并定时弹活。
   
-  
-  
+#### 22.在选用Redis存储架构（单实例，分片存储），应该考虑到哪些因素
+ 1.因素1：部署成本（单实例部署简单，分片部署复杂）
+ 2.因素2：数据量大小（单机可承受20G，30G还能接受；如果考虑几百G只能用分片存储）
+ 3.因素3：与落盘方案有关（单机数据量过大时，落盘效率会很低，容易阻塞master线程）
+ 4.因素4：易扩展（如果初期定位存的数据后续可能会大规模增长，单机就不并不合适）
+   
+#### 23.redis在分片后数据如何分布
+ redis会先将16384个slot平均分布在实例节点上，然后通过命令的key做hash计算，将结果对节点数量取模，判断应该落在哪个实例上
+
+#### 24.如果分片变动，客户端怎么感知节点上的slot变更
+ redis-cluster提供了重定向机制，即客户端在访问实例时如果没有数据，则会接到一个ask/move命令，告知重定向到其他实例取获取数据。
+ ask命令代表正在迁移中；move代表已经迁移完成。
+
+#### 25.如果需要存k-v数据，且k-v都是小于8字节的字符串，直接用sds存储有什么问题，该怎么存储才能节省空间；如果k-v是10个字节，怎么存储？
+ 直接使用sds存储字符串会导致空间浪费，redis的sds存储结构分为4部分：
+   1.len：已使用长度
+   2.alloc：已分配长度
+   3.flags：标志位（0-4代表5中类型，分别代表长度为5、8、16、32、64，这5种长度的sds）
+   4.buffer：内存存储数组
+ （？？？待补充）
+
+#### 26.redis的sds为什么要使用内存“不”对齐（？？？待补充）
+
+
+#### 27.有一亿个keys要统计，应该用哪种集合？
+
+#### 28.应用场景&redis类型
+ 1.商品对应评论的关系：可以用list存储
+ 2.排行榜、最新列表：可以用sortedset存储
+ 3.统计用户留存率：用list结构存储每天访问用户，计算留存率最好在redis的client端计算
+ 4.记录用户打卡
+	
+
+
+
+
+
+
+
+
+
   
   
   
   
    
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
  
  
  
