--- a/中间件/MySQL/Readme
+++ b/中间件/MySQL/Readme
@@ -56,3 +56,10 @@
 > 执行一个SQL返回数据量特别多的时候，还需要通过断开连接来释放Server端内存吗
 > 不同引擎的特点，以及使用场景
 
+#### 其他
+1.mysql innordb存储引擎的B+tree，默认每个索引页是16K，每个索引节点是数据类型长度+6字节下一层的指针引用，以索引类型bigint为例，bigint占用8字节+6字节引用=14字节，最终一页16上能存1000+个节点。
+Q：像B+Tree这种多叉树怎么平衡调整？
+
+2.mysql的主键为什么推荐要一定是自增整型？
+A：相比字符串的UUID，整型的存储空间消耗更少，查找效率更高。
+   第二点，mysql innordb采用聚簇索引存储数据，当一个数据页满了之后，此时如果要在本页插入一个数据，会导致数据页向下裂变，增加树的高度。
