--- a/中间件/Redis/Readme
+++ b/中间件/Redis/Readme
@@ -129,10 +129,28 @@
  2.排行榜、最新列表：可以用sortedset存储
  3.统计用户留存率：用list结构存储每天访问用户，计算留存率最好在redis的client端计算
  4.记录用户打卡
+ 
+#### Redis的一些坑
+ 1.主从数据不一致
+  原因：因为网络原因，slave延迟收到了master的消息；或者slave收到了一条复杂度高的命令，由于执行时间慢，导致未执行完期间主从不一致。
+  解决方案：可以增加监控节点，使用info.master_repl_offset和info.slave_repl_offset读取master和slave的同步数据进度，两者差值达到一定阈值时，将slave从集群中摘除。
+ 2.主从部署时，读到了过期数据
+  原因1：redis3.2版本之前存在一个bug，因为惰性删除的机制，只有当发生read时才会判断key是否过期，而读请求发生在slave节点，即便slave判断过期，因为无法写权限因此无法删除，而是读到了过期的数据。
+  解决方案1：升级到redis3.2以上，slave上的过期数据会返回null
+  原因2：redis3.2版本以上仍然有可能发生这种情况，是因为在新增key时，使用expire命令因主从延迟导致，例如expired [key] 60s，master收到请求时是9:00，而同步给slave的发生时间是9:01，这样主从就有1分钟的延迟
+  解决方案2：使用expire_at命令代替expire
 	
+#### Redis对事务的支持
+ 1.在命令正确的前提下，redis能保证事务的原子性、一致性和隔离性（配合watch命令），但无法完整的保证持久性。
+ 2.redis事务相关的命令：multi、exec、discard
+ 3.redis执行事务的原理：redis实例会为每个连接保留一个单独的事务队列，当收到客户端传入的multi命令时，会将后续所有的命令暂存到一个queue中，然后等执行exec时提交事务；如果收到了discard，则清空queue而丢弃事务。
+   需要注意的是，在exec命令执行过程中，如果其中一条命令执行失败，不会导致其他命令回滚，这时候无法保证原子性（但实际场景中，只要保证语法正确，redis写操作一般不会失败）。
 
-
-
+#### Redis的几种场景
+【数据不一致】写数据时开启事务，先写db，再写redis，全部成功后提交事务来保证两侧数据一致性。
+【雪崩】大量的key突然过期，导致请求全部传入到数据库；解决办法：通过给key增加扰动时间避免。
+【缓存穿透】redis的热点数据突然失效，导致访问该热点key的请求全部传入到数据库；解决办法：热点key不设置过期时间。
+【缓存击穿】访问的key既不在cache中也不在db中，导致请求全部穿入到数据库中；解决办法：可以通过给key缓存nil值来避免击穿数据库。
 
 
 
