--- a/中间件/Redis/Readme
+++ b/中间件/Redis/Readme
@@ -18,7 +18,7 @@
  String - sds
  List - 双向链表，压缩链表
  Hash - 压缩链表，哈希表
- SortedSet - 压缩列表，调表
+ SortedSet - 压缩列表，跳表
  Set - 哈希表，整数数组
  
 #### 5.整数数组和压缩列表在查找上优势并不大，为什么还需要呢？
