--- a/中间件/Redis/Readme
+++ b/中间件/Redis/Readme
@@ -16,8 +16,8 @@
 
 #### 4.redis数据类型和底层结构对应关系(什么时候会进行底层数据结构转换)
  String - sds
- List - 线性数组 - 双向链表，压缩链表
- Hash - k-v存储 - 压缩链表，哈希表
+ List - 线性数组 - 双向链表，压缩列表
+ Hash - k-v存储 - 压缩列表，哈希表
  SortedSet - 有序集合 - 压缩列表，跳表
  Set - 不能重复集合 - 哈希表，整数数组
  
