--- a/中间件/Redis/Readme
+++ b/中间件/Redis/Readme
@@ -167,7 +167,7 @@
  2.功能性：redis5.0的Stream数据结构满足了消息分组的要求
  3.顺序性：在5.0之前，可以用list数据结构保证顺序性;5.0之后Stream可以保证顺序性
  4.消息重复：由消费者自己判断是否重复消费
- 5.消息可靠性：
+ 5.消息可靠性：不满足，redis的消息没有队列，订阅者不在线期间产生的消息会全部丢弃。
  
 #### 哪些操作可能会影响到Redis阻塞
  1.写入或删除一个big key在分配或释放内存时会消耗更多的时间(big value不会吗)
