--- a/中间件/Redis/Readme
+++ b/中间件/Redis/Readme
@@ -83,20 +83,32 @@
 #### 18.主从同步数据文件采用RDB格式，而非AOF原因
  RDB是二进制文件，存储文件相对AOF较小，方便带宽传输，且相比AOF回放日志而言，RDB还原速度更快。
  
-#### 19.如果master宕了怎么办
- redis的哨兵机制，可以保证重新选出master节点，整个选举信任master一般经历下面3个步骤：
- 1) 判定：在master正常时，哨兵集群会向其定时发送弹活包，一旦master挂掉时，哨兵也会第一时间感知到。此时哨兵会发起下线仲裁，给其他哨兵发送is-master-down-by-addr命令，征询投票结果，票数过半认定节点失效。
- 2) 选举：选举规则，优先排除掉网络不好的slave节点；然后将剩余的slave节点，根据优先级、主从数据复制进度（各个slave之间比对数据版本号），还有id大小进行打分。
- 3) 通知：通知其他客户端master已经重新选举。
+### 19.Redis的master宕机后如何保证高可用
+ 1.Redis通过哨兵机制保证了数据节点的高可用。在集群启动阶段，哨兵集群会对每个数据节点建立连接。
+ 2.在获得所有Redis数据节点后，哨兵集群会对每个数据节点建立长连接，并定时发送心跳（默认1s）；与此同时哨兵集群之间为了保证自身的高可用，哨兵节点之间也建立了长连接，并定时探活。
+ 3.当master面对哨兵发的心跳无回应时，哨兵会先将节点判定为主观下线。
+ 4.为了确认master节点是否真实下线，哨兵集群采用raft算法来共识master节点是否下线，当投票超过半数时，则判定为客观下线。
+ 5.确定master节点不可用后，哨兵集群中通过raft算法选举出一个leader来执行master的故障转移流程。
+ 6.新选举出的哨兵leader会从slave节点中选举出一个最优（根据配置的优先级、数据版本、ID自然排序）节点，晋升为master，并告知其他slave重新关联master节点。
+ 
+【补充】如果后续old-master重新上线，此时只能当slave
+【补充】哨兵是通过什么方式获得到slave节点信息的；哨兵集群是通过什么方式感知到彼此存在？
+   1.哨兵只配置了master节点的ip，slave节点的IP是通过info查询master获取的，这样slave配置只要存在于master即可，不用配置在2个地方。
+   2.一个集群内的哨兵信息，会配置同一个master，然后利用发布订阅功能监听一个哨兵专属的topic，来获得其他其他哨兵节点IP。
+【思考】在主从架构中，如果master节点变更后，客户端如何感知？
+  在主备架构中还好，客户端只配置了master的域名，因此master变更后客户端不需要感知；
+  但在主从架构中，客户端需要同事配置master和slave的域名，此时节点信息发生改变，客户端怎么感知？难道也需要通知到客户端变更吗？或者redis网管改变路由信息？ 
 
-#### 20.哨兵集群多数实例达成共识，判断出主库“客观下线”后，由哪个实例来执行主从切换呢？
- 哨兵集群判断出主库“主观下线”后，会选出一个“哨兵领导者”，之后整个过程由它来完成主从切换。
- 但是如何选出“哨兵领导者”？这个问题也是一个分布式系统中的问题，就是我们经常听说的共识算法，指的是集群中多个节点如何就一个问题达成共识。共识算法有很多种，例如Paxos、Raft，这里哨兵集群采用的类似于Raft的共识算法。
- 简单来说就是每个哨兵设置一个随机超时时间（增加扰动因子的目的是避免哨兵都立刻给自己投票，导致无法投票给其他人），超时后每个哨兵会请求其他哨兵为自己投票，其他哨兵节点对收到的第一个请求进行投票确认，一轮投票下来后，首先达到多数选票的哨兵节点成为“哨兵领导者”，如果没有达到多数选票的哨兵节点，那么会重新选举，直到能够成功选出“哨兵领导者”。
-  
-#### 21.redis的哨兵之间是如何进行协作的
- 哨兵之间的协作，是通过master的发布订阅来进行通信的（master上会存在"__sentinel__:hello"的频道）。
- 当哨兵上线后，通过给master发送info命令，来获取到slave节点信息，然后与slave建立连接并定时弹活。
+### 20.Redis哨兵如何保证自身可用性
+ 1.集群角度：哨兵之间也建立了长连接，并定时进行探活，而且一旦发现某哨兵节点不可用，也会和集群内其他节点进行共识将其下线。
+ 2.哨兵自身角度：Redis哨兵通过TILT机制实现了内部自检流程，当诊断自己有问题时，会进入自我保护模式，进入保护模式的哨兵就不在参与投票。
+ 
+【TILT模式】
+ Redis的哨兵在判定节点是否存活时，其实时严重依赖系统时间的，通过计算ping-pong的往返时间来完成的判定流程。而哨兵内部的定时任务执行时间过长或阻塞时，就会自我诊断进入TILT模式。
+ 因为在正常情况下，哨兵内部的定时任务是不会有阻塞发生的，如果两次执行时长出现过长或未负数(负数情况一般时系统时间被篡改)时，那么说明这个哨兵所处的网络不稳定或有其他问题，需要运维人工干预。
+
+### 21.Redis哨兵发生脑裂怎么办
+ Redis哨兵之间达成共识采用的是raft算法，通过多数派达成一致解决了脑裂问题。但极端情况下如果脑裂过于严重，以至于没有任何一个小集群能达到多数派，那么整个集群彻底不可用，例如9个节点，裂变出数量3-3-3的3个集群，那么此时哨兵集群也不可用。 
   
 #### 22.在选用Redis存储架构（单实例，分片存储），应该考虑到哪些因素
  1.因素1：部署成本（单实例部署简单，分片部署复杂）
